force-app/main/default/objects/Opportunity/fields/AI_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>AI_Next_Step__c</fullName>
    <label>AI Next Step</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>