force-app/main/default/objects/Opportunity/fields/Commission_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Commission_Calculated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commission Calculated</label>
    <type>Checkbox</type>
</CustomField>