force-app/main/default/objects/Opportunity/fields/Expected_Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Expected_Close_Reason__c</fullName>
    <label>Expected Close Reason</label>
    <type>TextArea</type>
</CustomField>