force-app/main/default/objects/Opportunity/fields/Health_Risk__c.field-meta.xml
<CustomField>
    <fullName>Health_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Health Risk</label>
    <type>Checkbox</type>
</CustomField>