force-app/main/default/objects/Opportunity/fields/Lead_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Detail__c</fullName>
    <label>Lead Source Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>